examples/test/testpolicy6293.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6293
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key44: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value35
          key9: value40
          key26: value9
      podSelector:
        matchLabels:
          key24: value48
